--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{.Title}}</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/public/style/style.css">
+    <link rel="stylesheet" href="/static/style/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5/dist/iro.min.js"></script>
-    <script src="/public/script/checkAuth.js" defer></script>
-    <script src="/public/script/script.js" defer></script>
-    <script src="/public/script/config.js" defer></script>
+    <script src="/static/script/checkAuth.js" defer></script>
+    <script src="/static/script/script.js" defer></script>
+    <script src="/static/script/config.js" defer></script>
 </head>
 <body>
     <header class="account-info-bar">
