--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{.Title}} - AAC Communicator</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/public/style/style.css">
+    <link rel="stylesheet" href="/static/style/style.css">
     {{block "extra-css" .}}{{end}}
     {{block "extra-head" .}}{{end}}
 </head>
