--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{.Title}}</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/public/style/style.css">
-    <script src="/public/script/auth.js"></script>
-    <script src="/public/script/config.js"></script>
+    <link rel="stylesheet" href="/static/style/style.css">
+    <script src="/static/script/auth.js"></script>
+    <script src="/static/script/config.js"></script>
 </head>
 <body>
     <div class="login-container">
