--- a/templates/setup.tmpl
+++ b/templates/setup.tmpl
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{.Title}}</title>
-    <link rel="stylesheet" href="/public/style/style.css">
-    <link rel="stylesheet" href="/public/style/setup.css">
+    <link rel="stylesheet" href="/static/style/style.css">
+    <link rel="stylesheet" href="/static/style/setup.css">
 </head>
 <body>
     <div class="setup-container">
@@ -29,7 +29,7 @@
         </div>
         <button id="confirm-setup" class="btn-primary" {{if not .GridOptions}}disabled{{end}}>Conferma e Inizia</button>
     </div>
-    <script src="/public/script/setup.js"></script>
-    <script src="/public/script/config.js"></script>
+    <script src="/static/script/setup.js"></script>
+    <script src="/static/script/config.js"></script>
 </body>
 </html>
